2006-05-12  Neal H. Walfield  <neal@gnu.org>

	* day_render.c (gtk_day_render_expose): Don't print the minutes.

2006-05-11  Neal H. Walfield  <neal@gnu.org>

	* day_view.c (day_view_event_clicked): Improve formatting of the
	information label.

2006-05-11  Neal H. Walfield  <neal@gnu.org>

	* event-ui.c (click_ok): Free the strings returned by
	gtk_text_buffer_get_text and gtk_editable_get_chars.

2006-05-11  Neal H. Walfield  <neal@gnu.org>

	* main.c (main): Cache the current directory and free it when no
	longer needed.

2006-05-11  Neal H. Walfield  <neal@gnu.org>

	* event-ui.c (click_ok): Let mktime compensate for DST.

2006-05-11  Neal H. Walfield  <neal@gnu.org>

	* main.c (just_new): Mark static.
	(view_container): Likewise.
	(toolbar): Likewise.
	(day_list): Remove unused declaration.
	(my_icons): Mark static.
	(window_x): Remove definition and make a local variable...
	(main): ... here.
	(window_y): Remove definition and make a local variable...
	(main): ... here.
	(week_offset): Don't explicitly initialize to 0.
	(collected_keys): Mark static.
	(ccpos): Likewise.
	(time_from_day): Set TM.TM_ISDST to -1.

2006-05-11  Neal H. Walfield  <neal@gnu.org>

	* month_view.c (gtk_month_view_reload_events): Let mktime
	compensate for DST.
	* event-ui.c (click_ok): Likewise.

2006-05-11  Neal H. Walfield  <neal@gnu.org>

	* main.c: Don't include <sys/types.h>, <stdio.h> or <unistd.h>.
	* day_view.c: Don't include <sys/types.h>, <stdio.h>, <stdlib.h>,
	<gpe/stylus.h>, "gtkdatesel.h", "event-cal.h" or "event-list.h".
	* week_view.c: Don't include <sys/types.h>, <gpe/stylus.h>,
	"gtkdatesel.h", "event-cal.h" or "event-list.h".
	* month_view.c: Don't include <sys/types.h>, "event-ui.h" or
	"gtkdatesel.h".
	(is_today): Don't define.

2006-05-11  Neal H. Walfield  <neal@gnu.org>
	Reported by Koen Kooi  <koen@dominion.kabel.utwente.nl>

	* day_render.c (gtk_day_render_expose): Display the lines
	separating the hours when the Bain's line is not present.
